<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
	<string name="app_name" translatable="false">Apollo</string>
	<string name="page_recent">Recent</string>
	<string name="page_artists">Artists</string>
	<string name="page_albums">Albums</string>
	<string name="page_songs">Songs</string>
	<string name="page_playlists">Playlists</string>
	<string name="page_genres">Genres</string>
	<string name="page_folders">Folders</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_search">Search</string>
	<string name="menu_shuffle">Shuffle all</string>
	<string name="menu_play_all">Play all</string>
	<string name="menu_sort_by">Sort by</string>
	<string name="menu_clear_queue">Clear queue</string>
	<string name="menu_save_queue">Save queue</string>
	<string name="menu_save_preset">Save preset</string>
	<string name="menu_share">Share</string>
	<string name="menu_add_to_homescreen">Pin to home screen</string>
	<string name="menu_equalizer">Equalizer</string>
	<string name="menu_simple">Simple</string>
	<string name="menu_detailed">Detailed</string>
	<string name="menu_grid">Grid</string>
	<string name="menu_view_as">View as</string>
	<string name="menu_clear_popular">Clear songs</string>
	<string name="menu_show_hidden">show hidden tracks</string>
	<string name="add_to_playlist">Add to playlist</string>
	<string name="add_to_favorites">Add to favorites</string>
	<string name="add_to_queue">Add to queue</string>
	<string name="remove_from_favorites">Remove from favorites</string>
	<string name="remove_from_queue">Remove from queue</string>
	<string name="remove_from_popular">Remove from popular</string>
	<string name="sort_order_entry_az">A-Z</string>
	<string name="sort_order_entry_za">Z-A</string>
	<string name="sort_order_entry_artist">Artist</string>
	<string name="sort_order_entry_album">Album</string>
	<string name="sort_order_entry_year">Year</string>
	<string name="sort_order_entry_duration">Duration</string>
	<string name="sort_order_entry_date_added">Date added</string>
	<string name="sort_order_entry_track_list">Track list</string>
	<string name="sort_order_entry_number_of_songs">Number of songs</string>
	<string name="sort_order_entry_number_of_albums">Number of albums</string>
	<string name="sort_order_entry_filename">Filename</string>
	<string name="playlist_favorite">Favorite</string>
	<string name="playlist_favorites">Favorites</string>
	<string name="playlist_last_added">Last added</string>
	<string name="playlist_most_played">Popular</string>
	<string name="new_playlist">New playlist</string>
	<string name="rename_playlist">rename playlist</string>
	<string name="copy_playlist">copy playlist</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="overwrite">Overwrite</string>
	<string name="new_playlist_name_template">Playlist <xliff:g id="number">%d</xliff:g></string>
	<string name="create_playlist_prompt">Playlist name</string>
	<string name="delete_dialog_title">Delete <xliff:g id="item" example="album">%s</xliff:g>?</string>
	<string name="cannot_be_undone">This cannot be undone</string>
	<string name="dialog_disable_bat_opt_title">Disable battery optimization</string>
	<string name="dialog_disable_bat_opt_message">It\'s recommended to disable battery optimization to prevent Android system interrupting the playback.</string>
	<string name="dialog_disable_bat_opt_confirm">apply</string>
	<string name="dialog_save_preset_title">save preset</string>
	<string name="dialog_disable_bat_opt_ignore">ignore</string>
	<string name="delete_warning">This will permanently delete the cached image entries</string>
	<string name="new_photo">Choose photo from Gallery</string>
	<string name="google_search">Google search</string>
	<string name="use_default">Use default photo</string>
	<string name="old_photo">Use old photo</string>
	<string name="context_menu_play_selection">Play</string>
	<string name="context_menu_play_next">Play next</string>
	<string name="context_menu_more_by_artist">More by artist</string>
	<string name="context_menu_rename_playlist">Rename</string>
	<string name="context_menu_copy_playlist">Copy</string>
	<string name="context_menu_delete">Delete</string>
	<string name="context_menu_fetch_album_art">Fetch album art</string>
	<string name="context_menu_fetch_artist_image">Fetch artist image</string>
	<string name="context_menu_remove_from_recent">Remove from recent</string>
	<string name="context_menu_use_as_ringtone">Use as ringtone</string>
	<string name="context_menu_remove_from_playlist">Remove from playlist</string>
	<string name="context_menu_hide_album">Hide album</string>
	<string name="context_menu_hide_track">Hide song</string>
	<string name="context_menu_hide_genre">Hide genre</string>
	<string name="context_menu_hide_artist">Hide artist</string>
	<string name="context_menu_hide_folder">Hide folder</string>
	<string name="context_menu_unhide_album">Unhide album</string>
	<string name="context_menu_unhide_track">Unhide song</string>
	<string name="context_menu_unhide_genre">Unhide genre</string>
	<string name="context_menu_unhide_artist">Unhide artist</string>
	<string name="context_menu_unhide_folder">Unhide folder</string>
	<string name="accessibility_play">Play</string>
	<string name="accessibility_pause">Pause</string>
	<string name="accessibility_next">Next</string>
	<string name="accessibility_prev">Previous</string>
	<string name="accessibility_shuffle">Shuffle</string>
	<string name="accessibility_shuffle_all">Shuffle all</string>
	<string name="accessibility_repeat">Repeat</string>
	<string name="accessibility_repeat_all">Repeat all</string>
	<string name="accessibility_repeat_one">Repeat one</string>
	<string name="accessibility_album_art">Album Art</string>
	<string name="accessibility_switch_queue">switch to queue</string>
	<string name="accessibility_switch_album_art">switch to album art</string>
	<string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> pinned to your home screen</string>
	<string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> could not be pinned to your home screen</string>
	<string name="error_add_playlist">could not add to playlist!</string>
	<string name="error_create_playlist">could not create playlist!</string>
	<string name="error_rename_playlist">could not rename playlist!</string>
	<string name="error_empty_playlistname">Playlist name empty!</string>
	<string name="error_duplicate_playlistname">Playlist already exists with this name!</string>
	<string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\' set as ringtone</string>
	<string name="theme_set"><xliff:g id="name">%s</xliff:g> set as the theme</string>
	<string name="explain_permission_write_settings">This permission is only required to set ringtone</string>
	<string name="error_audioeffects_not_supported">Audioeffects not supported!</string>
	<string name="settings_ui_category">Interface</string>
	<string name="settings_storage_category">Storage</string>
	<string name="settings_other">Other settings</string>
	<string name="settings_data_category">Data</string>
	<string name="settings_author_title">Author</string>
	<string name="settings_remastered_title">further developments by</string>
	<string name="settings_about_apollo">About Apollo</string>
	<string name="settings_special_thanks">Special thanks</string>
	<string name="settings_cyanogenmod_title" translatable="false">CyanogenMod</string>
	<string name="settings_self_title" translatable="false">Andrew Neal</string>
	<string name="settings_lopez_title" translatable="false">A.J. Lopez</string>
	<string name="settings_nuclearfog_title" translatable="false">nuclearfog</string>
	<string name="settings_lopez_summary">Icon and Play Store banner design</string>
	<string name="settings_color_scheme_title">Choose Apollo\'s default color scheme</string>
	<string name="settings_color_scheme_summary">Changes the accent color in Apollo</string>
	<string name="settings_theme_chooser_title">Theme chooser</string>
	<string name="settings_delete_cache_title">Delete cache</string>
	<string name="settings_delete_cache_summary">Remove all cached images</string>
	<string name="settings_disable_bat_opt_title">Disable battery optimization</string>
	<string name="settings_disable_bat_opt_summary">Battery optimization may cause playback to stop when running in the background</string>
	<string name="settings_download_only_on_wifi_title">Download via Wi-Fi only</string>
	<string name="settings_prefer_external_equalizer">Prefer external equalizer</string>
	<string name="settings_use_old_notification">Use old notification style</string>
	<string name="settings_use_old_notification_summary">Enable if notification is not shown correctly</string>
	<string name="settings_download_only_on_wifi_summary">To reduce carrier charges, don\'t download over mobile networks</string>
	<string name="settings_download_missing_artwork_title">Download missing album art</string>
	<string name="settings_download_artist_images_title">Download missing artist images</string>
	<string name="settings_open_source_licenses">Open source licenses</string>
	<string name="settings_version_title">Version number</string>
	<string name="share_track_using">Share track using:</string>
	<string name="color_picker_title">Color scheme</string>
	<string name="hex" translatable="false">#</string>
	<string name="current_color">Current</string>
	<string name="new_color">New</string>
	<string name="app_widget_small" translatable="false">Apollo: 4×1</string>
	<string name="app_widget_large" translatable="false">Apollo: 4×2</string>
	<string name="app_widget_large_alt">Apollo: 4×2 (alternate)</string>
	<string name="app_widget_recent">Apollo: recently listened</string>
	<string name="app_widget_text_separator" translatable="false">-</string>
	<string name="no_effects_for_you">The equalizer could not be opened.</string>
	<string name="empty_music">To copy music from your computer to your device, use a USB cable.</string>
	<string name="empty_search">No search results found</string>
	<string name="error_permission_denied">App can\'t work with permission to read storage and phone state!</string>
	<string name="empty_recents">There are no tracks listened yet.</string>
	<string name="empty_playlist">This playlist is empty.</string>
	<string name="empty_favorits">There are no tracks added to favorits!</string>
	<string name="empty_artst_albums">There is no album of this artist</string>
	<string name="empty_preset_name">empty name!</string>
	<string name="label_enable_equalizer">enable Audio FX</string>
	<string name="label_bass_boost">Bass boost</string>
	<string name="label_reverb">Room size</string>
	<string name="title_audio_effects">Audio effects</string>
	<string name="label_preset">Preset:</string>
	<string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%3$02d</xliff:g></string>
	<string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%2$02d:%3$02d</xliff:g></string>
	<string name="lastfm_api_key">LastFM API key</string>
	<string name="preset_name_hint">enter preset name</string>
	<string name="preset_custom">custom</string>
</resources>