<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2012 Andrew Neal
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
 
       http://www.apache.org/licenses/LICENSE-2.0
 
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/appwidget_bg"
    tools:ignore="ContentDescription,RtlSymmetry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/app_widget_large_alternate_image"
            android:layout_width="@dimen/app_widget_large_alternate_artwork_size"
            android:layout_height="@dimen/app_widget_large_alternate_artwork_size"
            android:background="@drawable/default_artwork" />

        <LinearLayout
            android:id="@+id/app_widget_large_alternate_info_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/notification_info_container_padding_left"
            android:paddingLeft="@dimen/notification_info_container_padding_left">

            <TextView
                android:id="@+id/app_widget_large_alternate_line_one"
                style="@style/NotificationText"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_widget_large_alternate_line_two"
                style="@style/NotificationText"
                android:textColor="@color/transparent_white"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/app_widget_large_alternate_line_three"
                style="@style/NotificationText"
                android:textColor="@color/transparent_white"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="@color/transparent_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="@dimen/app_widget_bottom_margin"
        android:dividerPadding="@dimen/notification_expanded_buttons_divider_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:showDividers="middle">

        <ImageButton
            android:id="@+id/app_widget_large_alternate_shuffle"
            android:layout_width="0dp"
            android:layout_height="@dimen/notification_expanded_button_height"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/accessibility_shuffle"
            android:padding="@dimen/notification_expanded_button_padding"
            android:src="@drawable/btn_playback_shuffle" />

        <ImageButton
            android:id="@+id/app_widget_large_alternate_previous"
            android:layout_width="0dp"
            android:layout_height="@dimen/notification_expanded_button_height"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/accessibility_prev"
            android:padding="@dimen/notification_expanded_button_padding"
            android:src="@drawable/btn_playback_previous" />

        <ImageButton
            android:id="@+id/app_widget_large_alternate_play"
            android:layout_width="0dp"
            android:layout_height="@dimen/notification_expanded_button_height"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:padding="@dimen/notification_expanded_button_padding"
            android:src="@drawable/btn_playback_pause" />

        <ImageButton
            android:id="@+id/app_widget_large_alternate_next"
            android:layout_width="0dp"
            android:layout_height="@dimen/notification_expanded_button_height"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/accessibility_next"
            android:padding="@dimen/notification_expanded_button_padding"
            android:src="@drawable/btn_playback_next" />

        <ImageButton
            android:id="@+id/app_widget_large_alternate_repeat"
            android:layout_width="0dp"
            android:layout_height="@dimen/notification_expanded_button_height"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/accessibility_repeat"
            android:padding="@dimen/notification_expanded_button_padding"
            android:src="@drawable/btn_playback_repeat" />

    </LinearLayout>

</LinearLayout>